--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
   "deptry~=0.19",
+  "openai~=1.65",
   "pyright~=1.1",
   "pytest-asyncio~=0.24",
   "pytest-xdist[psutil]~=3.6",
